--- a/Index.css
+++ b/Index.css
@@ -2,45 +2,53 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
-}
-.main-container{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #202020;
-    height: 100vh;
-}
-.container{
-    width: 35%;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    background-color: white;
-   border-radius: 15px;
-}
-.box-one{
-    background-color: #FF1093;
-    font-size: 20px;
-    font-weight: 800;
-    width: 80%;
-    height: 15vh;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-    border-radius: 10px;
-    font-size: 35px;
-    margin-top: -30px;
-    text-transform: capitalize;
-    
-}
-.box-two{
-    font-size: 20px;
-    width: 100%;
-    padding: 30px;
+    font-family: "Lato", serif;
+
 }
 
+.main-container{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    background: url('./images.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.container{
+    width: 90%;
+    height: 100%;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    flex-direction: column;
+    background-color: rgba(0,0,0,0);
+    opacity: 1;
+}
+h1{
+ font-size: 5rem;
+}
+p{
+    font-size: 25px;
+}
+
+.button-container{
+   margin-top: 5vh;
+   display: flex;
+   align-items: center;
+   width: 100%;
+   justify-content: center;
+}
+.button-container button{
+    padding: 10px 25px;
+    margin: 5vh;
+    border: 1px solid blue;
+    background-color: transparent;
+    border-radius: 10px;
+}
+button a{
+    color: white;
+    text-decoration: none;
+}
